--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         değişiklikler ve kültürel dönüşümler eleştiri konusu olmuştur.
                     </p>
                 <h2> Yıldız sarayının gazinoya çevirilmesi
-                     <img src="5.jpeg" alt="saray" style="max-width:45%; height:auto;">
+                     <img src="5.jpg" alt="saray" style="max-width:45%; height:auto;">
 
                 <h2> Arapca Kuran ve Namaz yasakları</h2>
                     <img src="6.jpg" alt="yasak" style="max-width:45%; height:auto;">
@@ -483,3 +483,4 @@
 </body>
 
 </html>
+
