--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         <!-- Kemalist Rejimi Sayfası -->
         <div id="kemalist" class="page">
             <div class="content-card">
-                <h1>Kemalist Rejimi Zararları</h1>
+                <h1>Kemalist Rejimi Gerçekleri</h1>
                 
                 <div class="content-image">
                             <img src="kamal.jpg" alt="kamal" style="max-width:45%; height:auto;">
@@ -419,7 +419,8 @@
                         değişiklikler ve kültürel dönüşümler eleştiri konusu olmuştur.
                     </p>
                 <h2> Yıldız sarayının gazinoya çevirilmesi
-                     <img src="5.jpg" alt="saray" style="max-width:45%; height:auto;">
+                    <br>
+                     <img src="4.jpeg" alt="saray" style="max-width:45%; height:auto;">
 
                 <h2> Arapca Kuran ve Namaz yasakları</h2>
                     <img src="6.jpg" alt="yasak" style="max-width:45%; height:auto;">
@@ -483,4 +484,5 @@
 </body>
 
 </html>
+
 
