--- a/index.html
+++ b/index.html
@@ -396,6 +396,10 @@
                         <p>Nuriye akman ile röportaji 11-14 Haziran 1995</p> 
                         <p>Vahideddin- Elbette hain değildi. Dünyanın en namuslu adamlarından biriydi. Ölürken yastığının altından parasızlıktan alamadığı ilaçlarının reçeteleri çıktı. Bunu Tarık Mümtaz Göztepe anlatıyor. Ve cenazesini rehin ettiler San Remo'da. Akrabaları, arkadaşları cenazeyi kaçırdılar da gömüldü. Bunlar hakkında hüküm verebilmek için önce bilgili olmak lâzım. Bakın Hazine-i Hassa Reisi Refik Bey'i çağırıp, sayım yaptırdı gitmeden evvel. Oradan kaşıkçı elmasını alıp gidebilirdi. Hakkıydı, ailesinin çünkü. Kesinlikle bunlar namusu mücessem. Kafanız hiç karışmasın devrimlerin kaderi budur. Evet, Atatürk, Vahdettin'e 'vatan haini' dedi ama bence hata etti… İlk yapılacak şey, Nutuk'un bir tarih olmadığını açıkça ortaya koymak. Yani Nutuk'a isnat ederek bir hâdisenin tek başına Nutuk'un çerçevesi içinde izahı mümkün olmadığı kabul edilmelidir.</p>
 
+                    <h2>Ecevit: Vahidettin hain değil</h2>
+                        <img src="Capture d'écran 2025-10-27 210427.png" alt="meclis" style="max-width:45%; height:auto;">
+
+                        
                 </div>
 
                 <button class="back-button" onclick="showPage('home')"><span>← Ana Sayfaya Dön</span></button>
@@ -490,6 +494,7 @@
 </body>
 
 </html>
+
 
 
 
