--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@
                     <p> Jeremy Wilson "Lawrence of Arabia"</p>
                     <img src="8.jpg" alt="yasak" style="max-width:45%; height:auto;">
 
+                <h2> Uğur mumcu: Kazım Karabekir anlatıyor</h2>
+                    <img src="9.jpg" alt="yasak" style="max-width:45%; height:auto;">
+
            
                 </div>
 
@@ -494,6 +497,7 @@
 </body>
 
 </html>
+
 
 
 
