--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
 
                 <h2> Uğur mumcu: Kazım Karabekir anlatıyor</h2>
                     <img src="9.jpg" alt="yasak" style="max-width:45%; height:auto;">
+                    <p>M. Kemal: Evet Karabekir, arap oğlunun (haşa Peygamberimizin) yavelerini (saçmalıklarını / yalanlarını) Türk oğullarına öğretmek için Kur’ân’ı Türkçeye tercüme ettireceğim. Ve böylece de okutacağım. Ta ki budalalık edip de aldanmakta devam etmesinler…</p>
 
            
                 </div>
@@ -497,6 +498,7 @@
 </body>
 
 </html>
+
 
 
 
