--- a/index.html
+++ b/index.html
@@ -444,7 +444,13 @@
                     <img src="9.jpg" alt="yasak" style="max-width:45%; height:auto;">
                     <p>M. Kemal: Evet Karabekir, arap oğlunun (haşa Peygamberimizin) yavelerini (saçmalıklarını / yalanlarını) Türk oğullarına öğretmek için Kur’ân’ı Türkçeye tercüme ettireceğim. Ve böylece de okutacağım. Ta ki budalalık edip de aldanmakta devam etmesinler…</p>
 
-           
+               <h2> Risale-i Nur da Kemal paşa hakkında konuşulduğunu düşündüğüm yerler</h2>
+                    <p> asayı musa sayfa 81</p>
+                     <img src="11.jpeg" alt="yasak" style="max-width:45%; height:auto;">
+                    <br>
+                    <p> asayı musa sayfa 173</p>
+                     <img src="10.jpeg" alt="yasak" style="max-width:45%; height:auto;">
+                    
                 </div>
 
                 <button class="back-button" onclick="showPage('home')"><span>← Ana Sayfaya Dön</span></button>
@@ -498,6 +504,7 @@
 </body>
 
 </html>
+
 
 
 
