--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@
                     <br>
                     <p> asayı musa sayfa 173</p>
                      <img src="10.jpeg" alt="yasak" style="max-width:45%; height:auto;">
+               <h2>1936 chp genel sekreterliğine bağlı ülkü dergisinde halk evleri tarifi</h2>
+                     <img src="12.jpeg" alt="yasak" style="max-width:45%; height:auto;">
+                    
                     
                 </div>
 
@@ -504,6 +507,7 @@
 </body>
 
 </html>
+
 
 
 
