--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <p> asayı musa sayfa 173</p>
                      <img src="10.jpeg" alt="yasak" style="max-width:45%; height:auto;">
                <h2>1936 chp genel sekreterliğine bağlı ülkü dergisinde halk evleri tarifi</h2>
-                     <img src="12.jpeg" alt="yasak" style="max-width:45%; height:auto;">
+                     <img src="12.jpg" alt="yasak" style="max-width:45%; height:auto;">
                     
                     
                 </div>
@@ -507,6 +507,7 @@
 </body>
 
 </html>
+
 
 
 
