--- a/index.html
+++ b/index.html
@@ -484,6 +484,14 @@
                         Hakkında farklı değerlendirmeler yapılmakla birlikte, döneminin önemli bir devlet adamı olarak 
                         imparatorluğu ayakta tutmak için çaba sarf ettiği kabul edilmektedir.
                     </p>
+                    <br>
+                    <h2>Babam Sultan Abdülhamid : Ayşe Osmanoğlu</h2>
+                     <img src="13.jpg" alt="hatirat" style="max-width:45%; height:auto;">
+                     <br>
+                     <h3>Abdülhamid’in annesi ermeni iddiası</h3>
+                      <p>Büyükbabamın bütün haremleri Çerkeş’tir. Saraya Rum ve Ermeni cinsinden bir kadının girdiği ne görülmüş, ne de işitilmiştir. Böyle olduğu halde babamın şahsî düşman­ lan, annesinin Çandır admda bir Ermeni kadını olduğunu söylemişlerdir. Bu iddiayı ilk defa ortaya atan, «Abdül- hamid’in Evâil-i Saltanatı» adlı eserin sahibi Ahmed Sâ- ib’dir^. Saray hayatını bilmeyen saf halkı bununla kandıak babama karşı bir düşmanlık doğurmaya kalkmıştır. Sultan Abdülmecid'in bütün haremlerini, Padişah zevcesi oldukları için ihtimal asîl sayan Türk milleti, bir Erme­niden doğmuş olan Sultan Hamid’i aşağı görür düşünce­siyle uydurulan bu yalan tutunmamışsa da dedikodu halin­ de söylenmekten de geri kalmamıştır. 
+
+</p>
                 </div>
 
                 <button class="back-button" onclick="showPage('home')"><span>← Ana Sayfaya Dön</span></button>
@@ -507,6 +515,7 @@
 </body>
 
 </html>
+
 
 
 
