--- a/index.html
+++ b/index.html
@@ -488,8 +488,15 @@
                     <h2>Babam Sultan Abdülhamid : Ayşe Osmanoğlu</h2>
                      <img src="13.jpg" alt="hatirat" style="max-width:45%; height:auto;">
                      <br>
-                     <h3>Abdülhamid’in annesi ermeni iddiası</h3>
+                     <h3>Sultan Abdülhamid’in annesi ermeni iddiası</h3>
                       <p>Büyükbabamın bütün haremleri Çerkeş’tir. Saraya Rum ve Ermeni cinsinden bir kadının girdiği ne görülmüş, ne de işitilmiştir. Böyle olduğu halde babamın şahsî düşman­ lan, annesinin Çandır admda bir Ermeni kadını olduğunu söylemişlerdir. Bu iddiayı ilk defa ortaya atan, «Abdül- hamid’in Evâil-i Saltanatı» adlı eserin sahibi Ahmed Sâ- ib’dir^. Saray hayatını bilmeyen saf halkı bununla kandıak babama karşı bir düşmanlık doğurmaya kalkmıştır. Sultan Abdülmecid'in bütün haremlerini, Padişah zevcesi oldukları için ihtimal asîl sayan Türk milleti, bir Erme­niden doğmuş olan Sultan Hamid’i aşağı görür düşünce­siyle uydurulan bu yalan tutunmamışsa da dedikodu halin­ de söylenmekten de geri kalmamıştır. 
+
+</p>
+                    <br>
+                     <h3>Sultan Abdülhamid'e karşı çıkan iftira fetva</h3>
+                     <p>O zaman ikinci askerî şahıs ki bunun da Arif Hikmet Paşa olduğunu sonradan öğrendik, fetva suretini okumaya başladı. Fetva şöyle başlıyordu: «İmâm-ı Müslîmîn olan Zeyd bazı mesâil-i mühimme-i şer’iyyeyi kütüb-i şer’îyyeden tayyü ihrâc ve kütüb-i mezkûreyi men’ü hark ü İh- rak...» 
+
+Bu «kütüb'i şer’iyyeyi hark ü ihrak»" yeni «şer’i kitap­ ları yırtıp yakma» sözleri geçince babam yüksek sesle, «Ben hangi kütübi şer’iyyeyi yakmışım? Hasbenaliah de­ rim,» dedi ve fetvayı sonuna kadar dinledi. Fetvanın okun­ ması bitince, ,«Bu kararı hangi makam verdi?» diye Arif Hikmet Paşa’ya sordu. Arif Hikmet, «Meclis-i Millî,» diye cevap verdi. Bunun üzerine babam, «Ya... Öyle mi? Bu meclise riyaset eden kimdir?» dedi. Ve Âyan Reisi Said Paşa olduğu cevabını alınca hayret eden bir seda ile, «Said Paşa, öyle mi?» dedikten sonra şu sözleri söyledi: «Otuzüç sene millet ve devletim için, memleketimin selâmeti için çalıştım. Elimden geldiği kadar hizmet ettim. Hâkimim Al­lah ve beni muhakeme edecek de Resûlullah’tır. Bu mem­leketi nasıl buldumsa öylece teslim ediyorum. Hiç kimse­ ye bir kanris toprak vermedim. Hizmetimi ancak Cenab-ı Hakk’m takdirine bırakıyorum. Ne çare ki düşmanlarım bütün hizmetime kara bir çarşaf çekmek istediler ve mu­vaffak da oldular.»
 
 </p>
                 </div>
@@ -515,6 +522,7 @@
 </body>
 
 </html>
+
 
 
 
